[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/BackgroundMain.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/BarryPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/JohnPopup.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/PlayerPopup.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/JohnConsole.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/BarryConsole.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/JohnClose.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/BarryClose.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/BarryDialogue.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/JohnDialogue.tscn" type="PackedScene" id=11]

[sub_resource type="Animation" id=1]
resource_name = "AirlockWarning"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.678431, 0.109804, 0.109804, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeIn"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Main" type="Control"]
modulate = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )

[node name="BackgroundMain" parent="." instance=ExtResource( 2 )]

[node name="Popups" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="BarryPopup" parent="Popups" instance=ExtResource( 3 )]
visible = false

[node name="JohnPopup" parent="Popups" instance=ExtResource( 4 )]
visible = false

[node name="PlayerPopup" parent="Popups" instance=ExtResource( 5 )]
visible = false

[node name="Crew" type="Node2D" parent="."]

[node name="JohnConsole" parent="Crew" instance=ExtResource( 6 )]

[node name="BarryConsole" parent="Crew" instance=ExtResource( 7 )]

[node name="JohnClose" parent="Crew" instance=ExtResource( 8 )]
editor/display_folded = true

[node name="BarryClose" parent="Crew" instance=ExtResource( 9 )]

[node name="Dialogues" type="Node" parent="."]
editor/display_folded = true

[node name="BarryDialogue" parent="Dialogues" instance=ExtResource( 10 )]

[node name="JohnDialogue" parent="Dialogues" instance=ExtResource( 11 )]

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AirlockWarning = SubResource( 1 )
anims/FadeIn = SubResource( 2 )
[connection signal="button_id" from="Popups/BarryPopup" to="." method="_on_BarryPopup_button_id"]
[connection signal="button_id" from="Popups/JohnPopup" to="." method="_on_JohnPopup_button_id"]
[connection signal="button_id" from="Popups/PlayerPopup" to="." method="_on_PlayerPopup_button_id"]
[connection signal="input_event" from="Crew/JohnConsole" to="." method="_on_JohnConsole_input_event"]
[connection signal="mouse_entered" from="Crew/JohnConsole" to="." method="_on_JohnConsole_mouse_entered"]
[connection signal="mouse_exited" from="Crew/JohnConsole" to="." method="_on_JohnConsole_mouse_exited"]
[connection signal="input_event" from="Crew/BarryConsole" to="." method="_on_BarryConsole_input_event"]
[connection signal="mouse_entered" from="Crew/BarryConsole" to="." method="_on_BarryConsole_mouse_entered"]
[connection signal="mouse_exited" from="Crew/BarryConsole" to="." method="_on_BarryConsole_mouse_exited"]

[editable path="BackgroundMain"]

[editable path="Crew/JohnConsole"]

[editable path="Crew/BarryConsole"]

[editable path="Crew/JohnClose"]
